--- a/html/base.html
+++ b/html/base.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
     <head>
+		  <meta charset="utf-8">
+
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+			<meta name="theme-color" content="#ffffff">
+			<title>Held nodig</title>
+	
+			<meta name="description" content="Heb jij een hulpvraag en heb je een held nodig? Ben jij een held en help je graag? In moeilijke tijden steunen we elkaar gewoon waar dat kan!">
+
+			<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+			<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
 
 	    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
