Cleanup main dir

--- a/html/base.html
+++ b/html/base.html
@@ -9,8 +9,8 @@
 	
 			<meta name="description" content="Heb jij een hulpvraag en heb je een held nodig? Ben jij een held en help je graag? In moeilijke tijden steunen we elkaar gewoon waar dat kan!">
 
-			<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-			<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+			<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+			<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
 
 	    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
@@ -18,7 +18,7 @@
     </head>
     <body>
 	    <div class="container"><br>
-		   <a href="index.php"><img src="logo.jpg" width="200px" /></a>
+		   <a href="index.php"><img src="/assets/images/logo.jpg" width="200px" /></a>
 		    <br>
         {% block content %}{% endblock %}
 	    </div>
