--- a/html/offerForm.html
+++ b/html/offerForm.html
@@ -42,7 +42,7 @@
 		    <label for="exampleFormControlTextarea1">Berichtje voor vrager</label>
 		    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="description" required=""></textarea>
 		  </div>
-		  <div class="g-recaptcha" data-sitekey="6LfvTOEUAAAAADCwQ8B23Gzp6DTnqfgpiAmRO1CX"></div>
+		  <div class="g-recaptcha" data-sitekey="{{ captchaSiteKey }}"></div>
 		  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 		  <br>
 		  
