Update all environment variables so stuff is the same

--- a/html/requestForm.html
+++ b/html/requestForm.html
@@ -53,7 +53,7 @@
 		    <textarea id="description" class="form-control" rows="3" name="description" required=""></textarea>
 			</div>
 			
-		  <div class="g-recaptcha" data-sitekey="{{ captchaSiteKey }}"></div>
+		  <div class="g-recaptcha" data-sitekey="{{ recaptchaSiteKey }}"></div>
 		  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 		  
 		  <br>
