--- a/html/heroForm.html
+++ b/html/heroForm.html
@@ -34,7 +34,7 @@
 		    <input id="email-input" type="email" class="form-control" name="mail" placeholder="piet@paulusma.com" required="">
 			</div>
 			
-		  <div class="g-recaptcha" data-sitekey="{{ captchaSiteKey }}"></div>
+		  <div class="g-recaptcha" data-sitekey="{{ recaptchaSiteKey }}"></div>
 		  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 		  <br>
 
